--- a/public_html/css/bar3.css
+++ b/public_html/css/bar3.css
@@ -13,28 +13,28 @@ body {
 
 #blocker {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 75%;
+  height: 75%;
   background-color: rgba(0, 0, 0, 0);
 }
 
 #instructions {
-  width: 100%;
-  height: 100%;
+  width: 75%;
+  height: 75%;
   display: -webkit-box;
   display: -moz-box;
   display: box;
   -webkit-box-orient: horizontal;
   -moz-box-orient: horizontal;
   box-orient: horizontal;
-  -webkit-box-pack: center;
-  -moz-box-pack: center;
-  box-pack: center;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  box-align: center;
+  -webkit-box-pack: left;
+  -moz-box-pack: left;
+  box-pack: left;
+  -webkit-box-align: left;
+  -moz-box-align: left;
+  box-align: left;
   color: #000000;
-  text-align: center;
+  text-align: left;
   cursor: pointer;
 }
 
@@ -43,7 +43,7 @@ display: inline-block;
 width: 500px;
 height: 50px;
 color: #336699;
-text-align: center;
+text-align: left;
 }
 
 #progressBar{
