--- a/public_html/css/bar.css
+++ b/public_html/css/bar.css
@@ -38,6 +38,39 @@ body {
   cursor: pointer;
 }
 
+#blocker2 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+#instructions2 {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  -webkit-box-orient: horizontal;
+  -moz-box-orient: horizontal;
+  box-orient: horizontal;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  box-pack: center;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  box-align: center;
+  color: #000000;
+  text-align: center;
+  cursor: pointer;
+}
+#container2{
+  position: relative;
+width: 50%;
+height: 50%;
+
+}
+
 #controlInfo{
 display: inline-block;
 width: 500px;
