--- a/public_html/css/bar3.css
+++ b/public_html/css/bar3.css
@@ -74,3 +74,38 @@ width: 100%;
 height: 100%;
 
 }
+
+
+
+#blocker2 {
+  position: absolute;
+  width: 75%;
+  height: 75%;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+#instructions2 {
+  width: 75%;
+  height: 75%;
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  -webkit-box-orient: horizontal;
+  -moz-box-orient: horizontal;
+  box-orient: horizontal;
+  -webkit-box-pack: left;
+  -moz-box-pack: left;
+  box-pack: left;
+  -webkit-box-align: left;
+  -moz-box-align: left;
+  box-align: left;
+  color: #000000;
+  text-align: left;
+  cursor: pointer;
+}
+#container2{
+  position: relative;
+width: 100%;
+height: 100%;
+
+}
